k8s/base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend
spec:
  selector:
    app: portfolio-backend
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
